Fixed nasty visibility / scrollbar bug

--- a/src/prune_envs/app.css
+++ b/src/prune_envs/app.css
@@ -14,6 +14,7 @@ Screen {
 
 EnvironmentsList {
     width: 100%;
+    height: 100%;
     margin: 2 2;
 }
 
